--- a/first.css
+++ b/first.css
@@ -1,5 +1,9 @@
-Xp{
+p {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: large;
     color: blue;
+}
+
+h1 {
+    color: green;
 }
