--- a/Gatsby/ibaslogic-gatsby-tutorial/src/styles/style.scss
+++ b/Gatsby/ibaslogic-gatsby-tutorial/src/styles/style.scss
@@ -21,3 +21,10 @@ a {
   color: $secondaryColor;
   text-decoration: none;
 }
+
+ul{
+  li{
+    margin-bottom: 50px;
+    list-style: none;
+  }
+}
