--- a/Tailwind/Project 2 - Responsive QR Code/css/main.css
+++ b/Tailwind/Project 2 - Responsive QR Code/css/main.css
@@ -623,6 +623,12 @@ video {
   color: hsl(220 15% 55% / var(--tw-text-opacity));
 }
 
+.shadow-2xl{
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 @media (min-width: 375px){
   .mobile\:w-3\/5{
     width: 60%;
@@ -635,18 +641,20 @@ video {
   }
 }
 
-@media (min-width: 1024px){
-  .lg\:w-1\/3{
+@media (min-width: 768px){
+  .md\:w-4\/12{
     width: 33.333333%;
   }
+}
 
+@media (min-width: 1024px){
   .lg\:w-3\/12{
     width: 25%;
   }
 }
 
 @media (min-width: 1280px){
-  .xl\:w-2\/12{
-    width: 16.666667%;
+  .xl\:w-\[20\%\]{
+    width: 20%;
   }
 }
