minor changes made

--- a/Tailwind/Project 4 - Social Links profile/css/main.css
+++ b/Tailwind/Project 4 - Social Links profile/css/main.css
@@ -669,6 +669,14 @@ video {
   vertical-align: baseline;
 }
 
+.align-middle{
+  vertical-align: middle;
+}
+
+.align-sub{
+  vertical-align: sub;
+}
+
 .font-Inter{
   font-family: Inter;
 }
